添加部分功能

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
     "/js/vendor.js": "/js/vendor.js?id=ec72003da19ac8848d6e",
-    "/js/app.js": "/js/app.js?id=85052ee71b70721e269a",
-    "/js/manifest.js": "/js/manifest.js?id=874758009e3dad76a2a8",
+    "/js/boss.js": "/js/boss.js?id=2cc2ea9316ea6bfcff3e",
+    "/js/manifest.js": "/js/manifest.js?id=10af1d666c12de7bc556",
     "/css/all.css": "/css/all.css?id=2a4d7ef58d3f37be3bae"
 }
