修改list面架构 添加react支持

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,3 @@
 {
-    "/js/vendor.js": "/js/vendor.js?id=07e7310ee3a63a276539",
-    "/js/boss.js": "/js/boss.js?id=2a89dbcb2b6dadd389ab",
-    "/js/manifest.js": "/js/manifest.js?id=10af1d666c12de7bc556",
-    "/css/all.css": "/css/all.css?id=2a4d7ef58d3f37be3bae"
+    "/element-react/index.js": "/element-react/index.js?id=ba0727c438ea1faa42e4"
 }
