--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch-poll": "npm run watch -- --watch-poll",
     "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "react": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=webpack-react.js"
   },
   "devDependencies": {
     "axios": "^0.16.2",
@@ -25,6 +26,18 @@
     "vue": "^2.1.10",
     "vue-echarts-v3": "^1.0.4",
     "vue-quill-editor": "^2.2.1",
-    "vue-router": "^2.0.3"
+    "vue-router": "^2.0.3",
+
+    "babel-core": "^6.0.20",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1"
+  },
+  "dependencies": {
+    "element-react": "^1.1.8",
+    "element-theme-default": "^1.4.3",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   }
 }
