--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
-    "/react-antd/vendor.js": "/react-antd/vendor.js?id=f127aacf72d7aa9fb00c",
-    "/react-antd/index.js": "/react-antd/index.js?id=5044b623ee8f3c9f0956",
-    "/react-antd/manifest.js": "/react-antd/manifest.js?id=6777ae62d7f68ff2754a",
+    "/js/vendor.js": "/js/vendor.js?id=c49705ab6dde8838117b",
+    "/js/boss.js": "/js/boss.js?id=737f3984cd47ebb6af44",
+    "/js/manifest.js": "/js/manifest.js?id=10af1d666c12de7bc556",
+    "/css/all.css": "/css/all.css?id=7ca8aac73d27cb659819",
     "/css/bootstrap-animation.css": "/css/bootstrap-animation.css?id=c4e51eb1d5e6d5ebabe1"
 }
