--- a/package.json
+++ b/package.json
@@ -10,12 +10,27 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.17",
+        "axios": "^0.16.2",
+        "babel-plugin-import": "^1.6.2",
+        "babel-polyfill": "^6.26.0",
         "bootstrap-sass": "^3.3.7",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^1.0",
+        "browser-sync": "^2.18.13",
+        "browser-sync-webpack-plugin": "^1.2.0",
+        "cross-env": "^5.1.1",
+        "element-ui": "^2.0.11",
+        "font-awesome": "^4.7.0",
+        "jquery": "^2.1.1",
+        "js-cookie": "^2.2.0",
+        "laravel-mix": "^1.6.1",
+        "less": "^2.7.3",
+        "less-loader": "^4.0.5",
+        "lockr": "^0.8.4",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "moment": "^2.19.2",
+        "nprogress": "^0.2.0",
+        "vue": "^2.5.8",
+        "vue-loader": "^13.5.0",
+        "vue-router": "^2.8.1",
+        "vuex": "^3.0.1"
     }
 }
