--- a/package.json
+++ b/package.json
@@ -11,29 +11,31 @@
     },
     "devDependencies": {
         "@tweenjs/tween.js": "^17.2.0",
+        "axios": "^0.18",
         "babel-plugin-import": "^1.6.5",
         "babel-polyfill": "^6.26.0",
+        "bootstrap": "^4.0.0",
         "bootstrap-sass": "^3.3.7",
         "browser-sync": "^2.18.13",
         "browser-sync-webpack-plugin": "^1.2.0",
+        "cross-env": "^5.1",
         "element-ui": "^2.2.1",
         "font-awesome": "^4.7.0",
+        "jquery": "^3.2",
         "js-cookie": "^2.2.0",
+        "laravel-mix": "^2.0",
         "less": "^2.7.3",
         "less-loader": "^4.0.6",
         "lockr": "^0.8.4",
+        "lodash": "^4.17.4",
         "moment": "^2.21.0",
         "nprogress": "^0.2.0",
+        "popper.js": "^1.12",
+        "quill-image-extend-module": "^1.1.2",
+        "vue": "^2.5.7",
         "vue-loader": "^13.5.0",
         "vue-router": "^2.8.1",
         "vuex": "^3.0.1",
-        "axios": "^0.18",
-        "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^2.0",
-        "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "vue-quill-editor": "^3.0.5"
     }
 }
