--- a/package.json
+++ b/package.json
@@ -31,11 +31,16 @@
         "moment": "^2.21.0",
         "nprogress": "^0.2.0",
         "popper.js": "^1.12",
+        "quill": "^1.3.6",
         "quill-image-extend-module": "^1.1.2",
+        "quill-image-resize-module": "^3.0.0",
         "vue": "^2.5.7",
         "vue-loader": "^13.5.0",
+        "vue-quill-editor": "^3.0.5",
         "vue-router": "^2.8.1",
-        "vuex": "^3.0.1",
-        "vue-quill-editor": "^3.0.5"
+        "vuex": "^3.0.1"
+    },
+    "dependencies": {
+        "quill-image-drop-module": "^1.0.3"
     }
 }
