--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
-        "mews/captcha": "^2.1"
+        "mews/captcha": "^2.1",
+        "zedisdog/laravel-schema-extend": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
