--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/js/admin.js": "/js/admin.js?id=50b7dc37b963add341a5",
-    "/js/vendor.js": "/js/vendor.js?id=da495976f97fb456f17e",
-    "/js/manifest.js": "/js/manifest.js?id=8dc6cd78606fe58b6628",
+    "/js/oper.js": "/js/oper.js?id=9f80d367bab42e69f087",
+    "/js/vendor.js": "/js/vendor.js?id=0d93afa8e6d7cc04568d",
+    "/js/manifest.js": "/js/manifest.js?id=ce6566a24afe6e358977",
     "/css/all.css": "/css/all.css?id=b8e940ad29af86ce64dc"
 }
