优化图片上传控件, 丰富运营中心添加表单

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,7 +1,8 @@
 {
-    "/js/admin.js": "/js/admin.js?id=90116079801df55bc068",
-    "/js/oper.js": "/js/oper.js?id=9f80d367bab42e69f087",
-    "/js/vendor.js": "/js/vendor.js?id=0d93afa8e6d7cc04568d",
-    "/js/manifest.js": "/js/manifest.js?id=ce6566a24afe6e358977",
+    "/js/admin.js": "/js/admin.js?id=9c06a50367e71397c387",
+    "/js/oper.js": "/js/oper.js?id=07f3ebe639002eff0927",
+    "/js/merchant.js": "/js/merchant.js?id=bf986dfca96c1735015b",
+    "/js/vendor.js": "/js/vendor.js?id=f9d8e8c3205647874769",
+    "/js/manifest.js": "/js/manifest.js?id=237a6a5bbfdc726b4b1d",
     "/css/all.css": "/css/all.css?id=b8e940ad29af86ce64dc"
 }
