--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "overtrue/laravel-pinyin": "^3.0",
         "overtrue/laravel-wechat": "~4.0",
         "predis/predis": "^1.1",
+        "simplesoftwareio/simple-qrcode": "^2.0",
         "zedisdog/laravel-schema-extend": "^1.0"
     },
     "require-dev": {
