--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
+        "maatwebsite/excel": "^3.0",
         "mews/captcha": "^2.1",
         "overtrue/laravel-pinyin": "^3.0",
         "overtrue/laravel-wechat": "~4.0",
