完成merchant-h5功能：订单查看，核销功能，登录/退出，快速导航

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "vuex": "^3.0.1"
     },
     "dependencies": {
-        "vue-amap": "^0.5.4"
+        "vue-amap": "^0.5.4",
+        "vue-scroller": "^2.2.4"
     }
 }
