--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "axios": "^0.18",
         "babel-plugin-import": "^1.6.5",
         "babel-polyfill": "^6.26.0",
+        "babel-preset-es2015": "^6.24.1",
         "browser-sync": "^2.18.13",
         "browser-sync-webpack-plugin": "^1.2.0",
         "cross-env": "^5.1.4",
