TPS账号绑定：接口相关

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,4 @@ PUSHER_APP_CLUSTER=mt1
 TPS_APIURL=http://www.tps138.test-timo4
 TPS_APIKEY=daqian!138
 TPS_MAILURL=http://10.1.1.113:8888
+TPS_MAILTOKEN=TPS20171114COM$PS
