添加 TPS_QUOTAURL

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,7 @@ TPS_APIURL=http://www.tps138.test-timo4
 TPS_APIKEY=daqian!138
 TPS_MAILURL=http://10.1.1.113:8888
 TPS_MAILTOKEN=TPS20171114COM$PS
+TPS_QUOTAURL=http://10.1.1.113:8888
 
 MERCHANT_ID='100000001304038'
 SELLER_EMAIL='daqian@shoptps.com'
