--- a/.env.example
+++ b/.env.example
@@ -51,5 +51,5 @@ COSV5_APP_ID=1257640953
 COSV5_SECRET_ID=AKIDreHl4Gu6ohZUEoFPSVO8h5HSRIyTl132
 COSV5_SECRET_KEY=yqZ7UgjbIi0CE7rYKn8HF1mOo372mLn7
 COSV5_BUCKET=daqian-public-1257640953
-COSV5_CDN= #https://{your-bucket-name}-{your-app-id}.file.myqcloud.com
-COSV5_SCHEME=https
+COSV5_REGION=ap-guangzhou
+COSV5_CDN=https://daqian-public-1257640953.cos.ap-guangzhou.myqcloud.com
