--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "~1.0",
         "maatwebsite/excel": "^3.0",
         "mews/captcha": "^2.1",
+        "mongodb/mongodb": "1.1",
         "overtrue/laravel-pinyin": "^3.0",
         "overtrue/laravel-wechat": "~4.0",
         "predis/predis": "^1.1",
