--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "doctrine/dbal": "^2.8",
         "fideloper/proxy": "~4.0",
         "freyo/flysystem-qcloud-cos-v5": "1.1.7.1",
         "guzzlehttp/guzzle": "^6.3",
