--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ APP_URL=http://localhost
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
+DB_HOST_READONLY=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=admin
 DB_USERNAME=root
