--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "laravel-mix": "^2.0",
         "less": "^2.7.3",
         "less-loader": "^4.0.6",
-        "lockr": "^0.8.4",
+        "lockr": "0.8.4",
         "lodash": "^4.17.4",
         "moment": "^2.21.0",
         "nprogress": "^0.2.0",
